--- a/css/style.css
+++ b/css/style.css
@@ -128,20 +128,11 @@ ul {
    Hero Section Grid
    =====================*/
 
-.sectionGrid {
+
+ .heroGrid {
+    display: grid;
     height: 680px;
     background-color: #2e4159;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    grid-template-areas: 
-    "heroGrid";
-
-
-}
- #heroGrid {
-    grid-area: heroGrid;
-    display: grid;
     padding: 0 55px 55px;
     grid-template-columns: 1fr 380px 1fr 1fr;
     grid-template-rows: 1fr;
@@ -159,10 +150,6 @@ ul {
 #headshot {
     grid-area: headshot;
     grid-column-start: 3;
-}
-
-.heroGridArea {
-    
 }
 
 
@@ -201,7 +188,6 @@ ul {
     justify-content: center;
     height: 500px;
     padding-left: 75px;
-    padding-right: ;
 }
 
 .myWorkChild1 {
@@ -261,7 +247,7 @@ ul {
 
 @media only screen and (max-width: 700px) {
   
-    #heroGrid {
+    .heroGrid {
       grid-template-rows: 400px 300px;
       grid-template-columns: 1fr;
       justify-content: center;
