--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ h1 {
     font-weight: 350;
     font-size: 77px;
     color: white;
+    margin-bottom: 0px;
 }
 
 h2 {
@@ -21,8 +22,8 @@ h3 {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-weight: 275;
     font-size: 43px;
-    line-height: 0;
-    color: #2e4159
+    color: #2e4159;
+    margin-bottom: 0px;
 }
 
 h4 {
@@ -110,7 +111,6 @@ ul {
     font-family: 'Roboto', sans-serif;
     color: white;
     padding: 8px 24px;
-    margin: 24px 0px;
     text-decoration: none;
     font-size: 18px;
     cursor: pointer;
@@ -119,7 +119,7 @@ ul {
 }
 
 .button:hover {
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
 
@@ -129,7 +129,7 @@ ul {
    =====================*/
 
 
- .heroGrid {
+   .heroGrid {
     display: grid;
     height: 680px;
     background-color: #2e4159;
@@ -137,7 +137,7 @@ ul {
     grid-template-columns: 1fr 380px 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 
-    "aboutMe headshot";
+    "  aboutMe headshot  ";
 }
 
 #aboutMe {
@@ -153,24 +153,35 @@ ul {
 }
 
 
+
+
+
+
 /* ======================
    About Me
    =====================*/
 
-.aboutMeParent {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
+.bioGrid {
+    display: grid;
+    height: 680px;
+    background-color: white;
+    padding: auto;
+    grid-template-columns: 20% 50% 10% 20%;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+        "  bio skills  ";
 }
 
-.aboutMeChild1 {
-    padding: 75px;
-    padding-right: 150px;
+#bio {
+    grid-area: bio;
+    grid-column-start: 2;
+    margin-right: 64px;
+    color: white;
 }
 
-.skillsChild2 {
-    padding: 75px;
-    padding-right: 200px;
+#skills {
+    grid-area: skills;
+    grid-column-start: 3;
 }
 
 /* ======================
@@ -246,14 +257,49 @@ ul {
 /* MEDIA QUERY */
 
 @media only screen and (max-width: 700px) {
-  
+
     .heroGrid {
-      grid-template-rows: 400px 300px;
-      grid-template-columns: 1fr;
-      justify-content: center;
-      align-content: center;
-      grid-template-areas: 
-      "aboutMe"
-      "headshot";
+        height: auto;
+        padding: 0%;
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 10% 80% 10%;
+        justify-content: center;
+        padding-top: 0%;
+        grid-template-areas:
+            "  aboutMe  "
+            "  headshot  ";
     }
-  }
+
+    #aboutMe {
+        grid-area: aboutMe;
+        grid-column-start: 2;
+        color: white;
+
+    }
+
+    #headshot > img {
+        object-fit: cover;
+        width: 100%;
+        margin-bottom: 10%;
+    }
+
+
+
+    .bioGrid {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 10% 80% 10%;
+        grid-template-areas:
+            "  bio  "
+            "  skills  ";
+    }
+
+    #bio {
+        grid-row-start: 1;
+        grid-column-start: 2;
+    }
+
+    #skills {
+        grid-row-start: 2;
+        grid-column-start: 2;
+    }
+}
