--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,6 @@ ul {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 
-
-
 /* ======================
    Hero Section Grid
    =====================*/
@@ -133,7 +131,7 @@ ul {
     display: grid;
     height: 680px;
     background-color: #2e4159;
-    padding: 0 55px 55px;
+    /* padding: 0 55px 55px; */
     grid-template-columns: 1fr 380px 1fr 1fr;
     grid-template-rows: 1fr;
     grid-template-areas: 
@@ -182,33 +180,45 @@ ul {
    My Work
    =====================*/
 
-#myWorkGrid {
+.myWorkGrid {
     display: grid;
     background-color: white;
-    padding: auto;
-    grid-template-columns: 25% 25% 25% 25%;
-    grid-template-rows: 25% 50%;
+    padding-bottom: 64px;
+    grid-template-columns: 10% 40% 40% 10%;
+    grid-template-rows: 10% 90%;
     grid-template-areas:
-        "myWorkHeader myWorkHeader"
-        "projectTitle projectImage";
+    "  myWorkHeader myWorkHeader  "    
+    "  projectTitle projectImage  ";
 }
-   #myWorkHeader {
+
+#myWorkHeader {
     grid-area: myWorkHeader;
-    padding-left: 75px;
-    padding-right: 75px;
+    padding: 0 130px;
+    /* grid-row-start: 1;
+    grid-column-start: 2; */
+    /* background-color: #2e4159; */
 }
 
-.projectTitle {
+/* #myWorkHeader >h3 {
+    color: white;
+} */
+
+#projectTitle {
     grid-area: projectTitle;
+    grid-row-start: 2;
+    grid-column-start: 2;
 }
 
-.projectImage {
+#projectImage {
     grid-area: projectImage;
+    grid-row-start: 2;
+    grid-column-start: 3;
 }
 
 /* ======================
    Footer
    =====================*/
+
 .footer {
     display: inline-block;
     background-color: #2E4159;
